# OpenSkeletonFitting

./: CMakeLists.txt  README.md
OpenSF/: CMakeLists.txt
OpenSFApp/: CMakeLists.txt  main.cpp
OpenSFFeatures/: CMakeLists.txt
OpenSFInput/: CMakeLists.txt  InputPlayerONI.h
OpenSFLib/: CMakeLists.txt
OpenSFVis/: CMakeLists.txt  Visualization3d.cpp  Visualization3d.h  main.cpp
OpenSFitting/: CMakeLists.txt  SkeletonFitting.cpp  SkeletonFitting.h
